<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/omenbackground"
    tools:context=".VestirPersonaje">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/personaje"
            app:srcCompat="@drawable/siluetapersonaje" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgbtnBrazoDerecho"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/brazoderecho"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/brazoderecho1" />

            <ImageButton
                android:id="@+id/imgbtnBrazoIzquierdo"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/brazoizquierdo"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/brazoizquierdo1" />

            <ImageButton
                android:id="@+id/imgbtnLegs"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/piernas"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/legsandbelt1" />

            <ImageButton
                android:id="@+id/imgbtnCabeza"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/cabeza"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/cabezapersonaje1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvBrazoDerecho"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/brazo_derecho" />

                <TextView
                    android:id="@+id/tvBrazoIzquierdo"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/brazo_izquierdo" />
                <TextView
                    android:id="@+id/tvPiernasCinturon"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:paddingStart="10dp"
                    android:paddingEnd="2dp"
                    android:gravity="center"
                    android:text="@string/piernas_y_cinturon" />

                <TextView
                    android:id="@+id/tvcabeza"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:text="@string/cabeza" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/imgbtnCuerpo"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/Armadura"                android:scaleType="fitCenter"
                app:srcCompat="@drawable/armorandrightshoulder1" />
            <TextView
                android:id="@+id/tvCuerpo"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/cuerpo" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>